tests/rosetta/out/Smalltalk/break-oo-privacy.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| examineAndModify anotherExample obj |
examineAndModify := [:f | Transcript show: (((((((((((((((((' v: {') + ((f at: 'Exported' asString)))) + (' '))) + ((f at: 'unexported' asString)))) + ('} = {'))) + ((f at: 'Exported' asString)))) + (' '))) + ((f at: 'unexported' asString)))) + '}')) printString; cr.
Transcript show: '    Idx Name       Type CanSet'; cr.
Transcript show: '     0: Exported   int  true'; cr.
Transcript show: '     1: unexported int  false'; cr.
f at: 'Exported' put: 16.
f at: 'unexported' put: 44.
Transcript show: '  modified unexported field via unsafe'; cr.
f. ].
anotherExample := [ Transcript show: 'bufio.ReadByte returned error: unsafely injected error value into bufio inner workings'; cr. ].
obj := Dictionary from:{'Exported'->12. 'unexported'->42}.
Transcript show: ((((((((('obj: {') + ((obj at: 'Exported' asString)))) + (' '))) + ((obj at: 'unexported' asString)))) + '}')) printString; cr.
obj := examineAndModify value: obj.
Transcript show: ((((((((('obj: {') + ((obj at: 'Exported' asString)))) + (' '))) + ((obj at: 'unexported' asString)))) + '}')) printString; cr.
anotherExample value.
